# embedotron

./: .gitignore  .test_api_keys.example  LICENSE  README.md  providers_default.yaml  pyproject.toml
embedotron/: __init__.py  embedding_abstract.py  embedding_config.py  embedding_openai.py  embedding_random.py  embedding_test.py  embedding_vecmath.py
